# Capital_one_hacathon

./: .gitignore  BUILD_WITHOUT_DOCKER.md  DEPLOYMENT_STATUS.md  DOCKER_COMMANDS.md  DOCKER_DEPLOYMENT.md  Dockerfile.backend  EXPRESS_DEPLOYMENT.md  FLUTTER_INTEGRATION_GUIDE.md  FLUTTER_URL_GUIDE.md  MANUAL_DEPLOYMENT.md  Makefile.simple  QUICK_START.md  README.md  READY_FOR_CLOUD.md  RENDER_CLI_GUIDE.md  RENDER_DEPLOYMENT.md  START-APP.md  build_apk.ps1  build_local.ps1  docker-compose.toml  docker-compose.yml  farmmate.toml  render.yaml  start_dev.ps1
.github/workflows/: farmmate.toml
agent-python/: .dockerignore  .env  .gitignore  Dockerfile  README.md  fix_imports.py  pyproject.toml  requirement.txt  requirements.txt  simple_web.py  terminal_app.py  test_intent.py
agent-python/docs/: MULTILINGUAL_INTENT_CLASSIFICATION.md  SERVER_SETUP_COMPLETE.md  SYSTEM_STATUS_REPORT.md  government_schemes_documentation.md  soil_agent_README.md  soil_agent_documentation.md  soil_agent_project_summary.md  weather_agent_README.md  weather_agent_documentation.md
agent-python/env/: sample.env
agent-python/model/: agricultural_multilabel_model.pkl  multilabel_binarizer.pkl  multilabel_tfidf_vectorizer.pkl
agent-python/src/: README.md  constants.py  frontend_integration_examples.py  main.py  performance_test.py  start_server.py
agent-python/src/agents/: base.py  farmer_agent.py  market_agent.py
agent-python/src/config/: model_conf.py  settings.py
agent-python/src/core/: llm.py
agent-python/src/data/: agmarknet_codes.json  government_schemes_plugin.py  price_from_mandi.py  soil_plugins.py  weather_plugins.py
agent-python/src/graph/: market_graph.py
agent-python/src/graph_arc/: graph.py  llm_optimizer.py  optimized_graph.py  optimized_router.py  prompts.py  prompts_new.py  prompts_old.py  router.py  schemas.py  state.py
agent-python/src/graph_arc/agents_node/: crop_health_pest_agent.py  decision_support_agent.py  government_schemes_agent.py  market_price_agent.py  offline_access_agent.py  policy_finance_agent.py  soil_crop_recommendation_agent.py  translation_language_agent.py  weather_agent.py  weather_agent_optimized.py
agent-python/src/graph_arc/core_nodes/: decision_support_node.py  decision_support_optimized.py  offline_access_agent.py  query_understanding_node.py  translation_node.py  user_context_node.py
agent-python/src/plugins/: price_from_mandi.py
agent-python/src/server/: README.md  app.py  routes.py
agent-python/src/tests/: test_csv_soil_plugins.py  test_gov_schemes_llm.py  test_government_schemes.py  test_government_schemes_flow.py  test_intent_model.py  test_local.py  test_price_from_mandi.py  test_soil_flow.py  test_soil_plugins.py  test_weather_plugins.py  test_websocket_client.py
agent-python/src/tools/: mandi_price_tool.py
agent-python/src/utils/: loggers.py
backend/: Dockerfile  Dockerfile.enhanced  README.md  package-lock.json  package.json  package.toml
backend/src/: index.js
backend/tests/: README.md  run-all-tests.js  test-communication.js  test-comprehensive-farm.js  (+2 more)
chromaDB/: Dockerfile  README.md  chromadb_helper.py  config.toml  starter.py
env/: sample.env
frontend/: dockerfile  dockerfile.enhanced
nginx/: nginx.conf
scripts/: docker-farmmate.ps1  docker-farmmate.sh  farmmate-ultra-simple.ps1  start-farmmate-enhanced.ps1  start-farmmate-simple-working.ps1  start-farmmate.ps1  start-farmmate.sh
(+77 files in other folders)
